<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/massimiliano_morosinotto_background" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_moonrocks_regular"
            android:textSize="44sp" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_city"
            android:textColorHint="@color/edit_text_hint"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:fontFamily="@font/rubik_wet_paint_regular"
            />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_wet_paint_regular"
            android:layout_marginTop="20dp"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/oswald_variable_font_wght"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_visibility"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@color/transparent_linear">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_visibility"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                    <TextView
                        android:id="@+id/tv_visibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="100m"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_pressure"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@color/transparent_linear">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_pressure"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1023hPa"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_wind_speed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@color/transparent_linear">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_wind_power"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                    <TextView
                        android:id="@+id/tv_wind_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10 m/s"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_2"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_cloudiness"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@color/transparent_linear">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_cloudiness"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cloudiness"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                    <TextView
                        android:id="@+id/tv_cloudiness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_humidity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@color/transparent_linear">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_humidity"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_wind_direction"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@color/transparent_linear">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_wind_direction"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_direction"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/oswald_variable_font_wght"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/tv_wind_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="270"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/rubik_moonrocks_regular" />

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>




    </LinearLayout>




</FrameLayout>